secret-methods: Don't unref NULL when search fails

If the gnome-keyring D-Bus service is not responding, we wind up freeing
the SearchClosure in an error path without ever creating a SecretService
object. Guard against this.

https://bugzilla.gnome.org/show_bug.cgi?id=787391